# optparser

./: .gitignore  CMakeLists.txt  README.md  dependencies.json
include/optparser/: option_entity_config.hpp  optparser.hpp  optparser_config.hpp
include/optparser/errors/: invalid_type_error.hpp  unparsable_option_error.hpp
include/optparser/types/: optkey.hpp  optvalue.hpp
include/optparser/types/for_sequence-analyzer/: string_rule.hpp
include/optparser/types/optvalue/: invalid_value.hpp  rule.hpp  wrappers.hpp
include/optparser/types/optvalue/defaults/: floating_point_rule.hpp  int_rule.hpp  integral_rule.hpp
src/: optparser.cpp
src/types/for_sequence-analyzer/: string_rule.cpp
src/types/optvalue/defaults/: floating_point_rule.cpp  int_rule.cpp  integral_rule.cpp
test/: CMakeLists.txt
